# mysql-pg-range-bench

./: .env.example  .env.linux.example  .gitattributes  .gitignore  BENCHMARK.md  Cargo.toml  LINUX_EXISTING_DATABASES.md  LINUX_ONE_CLICK.md  README.md  WINDOWS_TEST.md  docker-compose.yml
scripts/: db-reset.sh  db-up.sh  system-info.sh
scripts/linux/: delete-local-instances.sh  install.sh  local-instance-lib.sh  run-existing-one-click.sh  run-existing-query-once.sh  run-one-click.sh  run-query-once.sh  run-query-ten-different.sh  run-query-ten-same.sh
scripts/windows/: run-smoke.ps1  start-local-databases.ps1  stop-local-databases.ps1
src/: main.rs
