[package]
name = "mysql-pg-range-bench"
version = "0.1.0"
edition = "2024"
description = "Deterministic MySQL/PostgreSQL bulk insert and indexed range-count benchmark"
license = "MIT"
default-run = "mysql-pg-range-bench"

[[bin]]
name = "linux-one-click"
path = "src/bin/linux_one_click.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "json"] }
tokio = { version = "1.47", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }
